<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/marginList"
    android:layout_marginRight="@dimen/marginList"
    android:layout_marginTop="@dimen/marginList"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nFromToCityDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/way"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fromToCityDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="TextView"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nFromDateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from_date"
                        android:textColor="@android:color/holo_red_dark"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fromDateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="TextView"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nFromTimeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from_time"
                        android:textColor="@android:color/holo_red_dark"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fromTimeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="TextView"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nFromInfoTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from_info"
                        android:textColor="@android:color/holo_red_dark"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fromInfoTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="TextView"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nToDateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_date"
                        android:textColor="@android:color/holo_red_dark"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/toDateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="TextView"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nToTimeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_time"
                        android:textColor="@android:color/holo_red_dark"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/toTimeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="TextView"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/nFomDateTextViewr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/numb_bus"
                        android:textColor="@android:color/holo_red_dark"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/busNumbTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="TextView"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nToInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="11dp"
                android:layout_marginRight="11dp"
                android:text="@string/to_info"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/toInfoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="TextView"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>